kubernetes/hands-on/kind-local/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello
  labels:
    purpose: kind-hands-on
