kubernetes/hands-on/kind-local/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kind-ingress
  namespace: hello
spec:
  ingressClassName: nginx
  rules:
    - host: hello.kind
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-kind-svc
                port:
                  number: 80
